# claude-usage-tracker

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: setup-guide.md
docs/superpowers/plans/: 2026-07-02-multi-account-split.md
docs/superpowers/specs/: 2026-07-02-multi-account-split-design.md
scripts/: claumon-account-track.ps1  claumon-token-refresh.ps1  install.ps1  uninstall.ps1
src/claude_usage_tracker/: __init__.py  account.py  chart.py  cli.py  db.py  export.py
tests/: test_account.py  test_cli_accounts.py  test_db_filter.py  test_export_filter.py
